--- a/products.html
+++ b/products.html
@@ -87,7 +87,7 @@
 			<img src="img/products/1.png" alt="shoe">
 		</button>
 
-<button class="product" data-toggle="collapse" data-target=".details" type="button">
+<button class="product" data-toggle="collapse" id="supergrip" data-target=".details" type="button">
 			<span class="title">SUPERGRIP</span>
 			<img src="img/products/2.png" alt="shoe">
 </button>
@@ -211,14 +211,61 @@
 		</button>
 	</div>
 	</div>
+	<div id="productlist">
+		<div class="wrap clearfix">
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">KENOFLO</span>
+			<img src="img/products/1.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">SUPERGRIP</span>
+			<img src="img/products/2.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">EASYRUN</span>
+			<img src="img/products/3.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">MASSIVE</span>
+			<img src="img/products/1.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">SHOEZ</span>
+			<img src="img/products/2.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">RUNFAST</span>
+			<img src="img/products/3.png" alt="shoe">
+		</button>
+		<button class="product" data-toggle="collapse" data-target=".details" type="button">
+			<span class="title">THE GRIPPER</span>
+			<img src="img/products/1.png" alt="shoe">
+		</button>
+	</div>
+	</div>
 </section>
 <section></section>
 <section></section>
-<footer>
+<footer class="clearfix">
 	<div class="wrap">
-		<p>&copy; MMXIII Winter Walking</p>
-		<p>Site by Transfer Creative</p>
+		<div class="column" id="column1">
+		<p>Winter Walking's full line of All-Traction Footwear™ can help you to reduce accidents, lower worker's compensation costs and keep employees working safely.</p>
 
+		<p>If you would like to place an order or get a specific quote, please visit the Ordering page.</p>
+</div>
+	<div class="column" id="column2">
+		<img src="img/xfr.png" alt="">
+</div>
+	<div class="column" id="column3">
+<ul>
+<li>Winter Walking Safety</li>
+<li>400 Babylon Road Horsham, PA 19044</li>
+</ul>
+<a href="mailto: info@winterwalking.com">info@winterwalking.com</a>
+<p>P 1-888-NO-SLIPS</p> 
+<p>P 1-888-667-5477</p>
+<p>F 1-215-441-9642</p>
+</div>
 
 	</div>
 
